# python-otbr-api

./: .gitignore  LICENSE  README.md  prek.toml  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  publish-to-pypi.yml  pythonpublish.yml  release-drafter.yml  test.yml
python_otbr_api/: __init__.py  mdns.py  models.py  pskc.py  tlv_parser.py
tests/: conftest.py  test_init.py  test_init_legacy.py  test_init_new.py  test_mdns.py  test_models.py  test_pskc.py  test_tlv_parser.py
tests/test_util/: aiohttp.py
