[build-system]
requires = ["setuptools~=65.6", "wheel~=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name         = "python-otbr-api"
version      = "1.0.0"
license      = {text = "MIT"}
description  = "API to interact with an OTBR via its REST API"
readme       = "README.md"
authors      = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
requires-python = ">=3.10.0"

[project.urls]
"Homepage" = "https://github.com/home-assistant-libs/python-otbr-api"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["python_otbr_api*"]
