[build-system]
requires = ["setuptools>=65.6"]
build-backend = "setuptools.build_meta"

[project]
name = "python-otbr-api"
version = "2.10.0"
license = { text = "MIT" }
description = "API to interact with an OTBR via its REST API"
readme = "README.md"
authors = [
  { name = "The Home Assistant Authors", email = "hello@home-assistant.io" },
]
requires-python = ">=3.11.0"
dependencies = [
  "aiohttp",
  "bitstruct",
  "cryptography",
  "typing_extensions",
  "voluptuous",
]

[project.urls]
Homepage = "https://github.com/home-assistant-libs/python-otbr-api"

[project.optional-dependencies]
dev = ["mypy", "prek", "pytest", "pytest-asyncio", "ruff"]

[tool.setuptools]
platforms = ["any"]
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["python_otbr_api*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--showlocals --verbose"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_format = "%(asctime)s.%(msecs)03d %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
python_version = "3.11"
strict = true
check_untyped_defs = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
disallow_any_expr = false
disallow_any_decorated = false
enable_error_code = [
  "abstract",
  "annotation-unchecked",
  "arg-type",
  "assert-type",
  "assignment",
  "attr-defined",
  "await-not-async",
  "call-arg",
  "call-overload",
  "comparison-overlap",
  "deprecated",
  "dict-item",
  "empty-body",
  "exhaustive-match",
  "exit-return",
  "func-returns-value",
  "has-type",
  "ignore-without-code",
  "import",
  "import-not-found",
  "import-untyped",
  "index",
  "list-item",
  "literal-required",
  "maybe-unrecognized-str-typeform",
  "metaclass",
  "method-assign",
  "name-defined",
  "name-match",
  "narrowed-type-not-subtype",
  "no-overload-impl",
  "no-redef",
  "no-untyped-call",
  "no-untyped-def",
  "operator",
  "overload-cannot-match",
  "overload-overlap",
  "override",
  "possibly-undefined",
  "prop-decorator",
  "redundant-cast",
  "redundant-expr",
  "redundant-self",
  "return",
  "return-value",
  "safe-super",
  "str-bytes-safe",
  "str-format",
  "syntax",
  "top-level-await",
  "truthy-bool",
  "truthy-function",
  "truthy-iterable",
  "type-abstract",
  "type-arg",
  "type-var",
  "typeddict-item",
  "typeddict-readonly-mutated",
  "typeddict-unknown-key",
  "unimported-reveal",
  "union-attr",
  "unreachable",
  "untyped-decorator",
  "unused-awaitable",
  "unused-coroutine",
  "unused-ignore",
  "used-before-def",
  "valid-newtype",
  "valid-type",
  "var-annotated",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = [
  "abstract",
  "no-untyped-call",
  "no-untyped-def",
  "redundant-expr",
  "unreachable",
  "untyped-decorator",
]

[tool.coverage.run]
source = ["python_otbr_api"]
relative_files = true

[tool.coverage.paths]
source = ["python_otbr_api/", "python_otbr_api\\"]

[tool.coverage.report]
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
  "B002",    # Python does not support the unary prefix increment
  "B007",    # Loop control variable {name} not used within loop body
  "B014",    # Exception handler with duplicate exception
  "B023",    # Function definition does not bind loop variable {name}
  "B026",    # Star-arg unpacking after a keyword argument is strongly discouraged
  "B904",    # Use raise from to specify exception cause
  "C",       # complexity
  "COM818",  # Trailing comma on bare tuple prohibited
  "D",       # docstrings
  "DTZ003",  # Use datetime.now(tz=) instead of datetime.utcnow()
  "DTZ004",  # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
  "E",       # pycodestyle
  "F",       # pyflakes/autoflake
  "G",       # flake8-logging-format
  "I",       # isort
  "ICN001",  # import conventions; {name} should be imported as {asname}
  "N804",    # First argument of a class method should be named cls
  "N805",    # First argument of a method should be named self
  "N815",    # Variable {name} in class scope should not be mixedCase
  "PERF101", # Do not cast an iterable to list before iterating over it
  "PERF102", # When using only the {subset} of a dict use the {subset}() method
  "PERF203", # try-except within a loop incurs performance overhead
  "PGH004",  # Use specific rule codes when using noqa
  "PLC0414", # Useless import alias. Import alias does not rename original package.
  "PLC",     # pylint
  "PLE",     # pylint
  "PLR",     # pylint
  "PLW",     # pylint
  "Q000",    # Double quotes found but single quotes preferred
  "RUF006",  # Store a reference to the return value of asyncio.create_task
  "S102",    # Use of exec detected
  "S103",    # bad-file-permissions
  "S108",    # hardcoded-temp-file
  "S306",    # suspicious-mktemp-usage
  "S307",    # suspicious-eval-usage
  "S313",    # suspicious-xmlc-element-tree-usage
  "S314",    # suspicious-xml-element-tree-usage
  "S315",    # suspicious-xml-expat-reader-usage
  "S316",    # suspicious-xml-expat-builder-usage
  "S317",    # suspicious-xml-sax-usage
  "S318",    # suspicious-xml-mini-dom-usage
  "S319",    # suspicious-xml-pull-dom-usage
  "S601",    # paramiko-call
  "S602",    # subprocess-popen-with-shell-equals-true
  "S604",    # call-with-shell-equals-true
  "S608",    # hardcoded-sql-expression
  "S609",    # unix-command-wildcard-injection
  "SIM",     # flake8-simplify
  "T100",    # Trace found: {name} used
  "T20",     # flake8-print
  "TID251",  # Banned imports
  "TRY",     # tryceratops
  "UP",      # pyupgrade
  "W",       # pycodestyle
]

ignore = [
  "D202", # No blank lines allowed after function docstring
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "D406", # Section name should end with a newline
  "D407", # Section name underlining
  "E501", # line too long
  "E731", # do not assign a lambda expression, use a def

  # Ignore ignored, as the rule is now back in preview/nursery, which cannot
  # be ignored anymore without warnings.
  # https://github.com/astral-sh/ruff/issues/7491
  # "PLC1901", # Lots of false positives

  # False positives https://github.com/astral-sh/ruff/issues/5386
  "PLC0208", # Use a sequence type instead of a `set` when iterating over values
  "PLR0911", # Too many return statements ({returns} > {max_returns})
  "PLR0912", # Too many branches ({branches} > {max_branches})
  "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
  "PLR0915", # Too many statements ({statements} > {max_statements})
  "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
  "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
  "UP006",   # keep type annotation style as is
  "UP007",   # keep type annotation style as is

  # Ignored due to incompatible with mypy: https://github.com/python/mypy/issues/15238
  "UP040", # Checks for use of TypeAlias annotation for declaring type aliases.

  # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",

  # Disabled because ruff does not understand type of __all__ generated by a function
  "PLE0605",
  "TRY003",
  "TRY201",
  "TRY300",

  "SIM103", # Return the condition {condition} directly
]

extend-safe-fixes = ["F401"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["python_otbr_api", "tests"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.codespell]
